--- a/mail_drones/css/style.css
+++ b/mail_drones/css/style.css
@@ -613,7 +613,7 @@ br.clearing {
     .footer-section {
         margin-bottom: 150px;
     }
-    .footer-section .mit-senseable-logo-area {
+    .footer-section .icl-logo-area {
         float:none;
         margin-left: 40px;
         margin-bottom: 50px;
